@startuml DozentGetController

skinparam classAttributeIconSize 0

package org.springframework {
    package web.bind.annotation {
        interface "@RestController" as RestController
        interface "@RequestMapping" as RequestMapping
        interface "@PathVariable" as PathVariable
        interface "@RequestParam" as RequestParam
        interface "@ExceptionHandler" as ExceptionHandler
        interface "@ResponseStatus" as ResponseStatus
    }

    package http {
        class ResponseEntity<T>
    }
    package hateoas {
        class CollectionModel<E>
    }
    package util {
        class MultiValueMap<K,V>
    }
}

package jakarta.servlet.http {
    interface HttpServletRequest
}

package java.util {
    class UUID
    UUID .up[hidden].> HttpServletRequest
}

package com.acme.dozent {
    package service {
        class DozentReadService << control >> << @Service >>
        class NotFoundException
    }

    package rest #DDDDDD {
        class DozentModel <<entity>>

        class DozentGetController << boundary >> << @RestController >> << @RequestMapping >> {
            + @GetMapping getById(@PathVariable id: UUID, request: HttpServletRequest): DozentModel
            + @GetMapping get(@RequestParam queryParams: MultiValueMap<String, String>, request: HttpServletRequest): CollectionModel<DozentModel>
        }

        class CommonExceptionHandler << @ControllerAdvice >> {
            + @ExceptionHandler @ResponseStatus onNotFound(ex: NotFoundException)
        }

        DozentGetController o--> "1" DozentReadService : service
        DozentGetController ..> DozentModel

        DozentGetController .up.> RestController
        DozentGetController .up.> RequestMapping
        DozentGetController .up.> PathVariable
        DozentGetController .up.> RequestParam
        DozentGetController .up.> ResponseEntity
        DozentGetController .up.> MultiValueMap
        DozentGetController .up.> CollectionModel
        DozentGetController .right.> HttpServletRequest

        CommonExceptionHandler .up.> ExceptionHandler
        CommonExceptionHandler .up.> ResponseStatus
        CommonExceptionHandler ..> NotFoundException
        CommonExceptionHandler .up[hidden].> DozentModel

        DozentGetController .right.> UUID

        DozentModel ..> DozentReadService
    }
}

hide empty members


@enduml
